# linera_end_to_end_tests

./: .gitmodules  README.md
benchmark_multi_operations_storage/: Cargo.toml
benchmark_multi_operations_storage/src/: main.rs
benchmark_multi_read_storage/: Cargo.toml
benchmark_multi_read_storage/src/: main.rs
benchmark_repeated_fungible_operations/: README.md  run_test.sh
benchmark_repeated_fungible_operations/smart_contract_code/: Cargo.toml
benchmark_repeated_fungible_operations/src/: main.rs
graphql_induced_crash/: Cargo.toml
graphql_induced_crash/complex-data-contract/src/: state.rs
graphql_induced_crash/complex-data-contract/tests/: graph_ql_operation.rs
test_evm_smart_contracts/: Cargo.toml  run_test.sh
test_evm_smart_contracts/morpho_test_code/: config.json  foundry.toml  run-nonreentrant-tests.sh
test_evm_smart_contracts/morpho_test_code/src/: Morpho.sol
test_evm_smart_contracts/morpho_test_code/test/: SimpleNonReentrantTest.sol
test_evm_smart_contracts/src/: main.rs  solidity.rs
test_fungible/: Cargo.toml  run_test.sh
test_fungible/smart_contract_code/fungible-no-graphql/: Cargo.toml
test_fungible/smart_contract_code/fungible-no-graphql/src/: contract.rs  lib.rs  service.rs
test_fungible/src/: main.rs
test_graphql_missing_keys/: Cargo.toml  run_test.sh
test_graphql_missing_keys/smart_contract_code/: Cargo.toml
test_graphql_missing_keys/smart_contract_code/complex-data-contract/: Cargo.toml
test_graphql_missing_keys/smart_contract_code/complex-data-contract/src/: contract.rs  lib.rs  state.rs
test_graphql_missing_keys/src/: main.rs
test_has_empty_storage/: README.md  run_test.sh
test_has_empty_storage/smart_contract_code/counter-no-state/src/: contract.rs  service.rs
test_has_empty_storage/smart_contract_code/state-triviality/src/: contract.rs  state.rs
test_has_empty_storage/src/: main.rs
test_has_non_trivial_state/: Cargo.toml  run_test.sh
test_has_non_trivial_state/smart_contract_code/: Cargo.toml
test_has_non_trivial_state/smart_contract_code/counter-no-state/src/: contract.rs  service.rs
test_has_non_trivial_state/smart_contract_code/state-triviality/: Cargo.toml
test_has_non_trivial_state/smart_contract_code/state-triviality/src/: contract.rs  lib.rs  service.rs  state.rs
test_has_non_trivial_state/src/: main.rs
test_has_trivial_state/: README.md  run_test.sh
test_has_trivial_state/smart_contract_code/counter-no-state/src/: lib.rs
test_has_trivial_state/smart_contract_code/state-triviality/src/: contract.rs  service.rs
test_http_query/: Cargo.toml  run_test.sh
test_http_query/smart_contract_code/: Cargo.toml
test_http_query/smart_contract_code/http-query/: Cargo.toml
test_http_query/smart_contract_code/http-query/src/: contract.rs  lib.rs  service.rs  state.rs
test_http_query/smart_contract_code/http-query/tests/: http_requests.rs
test_http_query/src/: main.rs
test_memory_usage/: Cargo.toml  clean.sh  run_test.sh
test_memory_usage/smart_contract_code/: Cargo.toml
test_memory_usage/smart_contract_code/counter-no-state/: Cargo.toml
test_memory_usage/smart_contract_code/counter-no-state/src/: contract.rs  lib.rs
test_memory_usage/src/: main.rs
test_migration_database_schema/: Cargo.toml  run_test.sh
test_migration_database_schema/smart_contract_code/: Cargo.toml
test_migration_database_schema/smart_contract_code/social/src/: contract.rs  lib.rs  state.rs
test_migration_database_schema/src/: main.rs  specified_local_net.rs
test_reported_solutions/: Cargo.toml  run_test.sh
test_reported_solutions/smart_contract_code/: Cargo.toml
test_reported_solutions/smart_contract_code/complex-data-contract/: err2
test_reported_solutions/smart_contract_code/complex-data-contract/src/: contract.rs  lib.rs  state.rs
test_reported_solutions/smart_contract_code/reported-solutions/: Cargo.toml
test_reported_solutions/smart_contract_code/reported-solutions/src/: contract.rs  lib.rs  service.rs  state.rs
test_reported_solutions/src/: main.rs
test_wasm_counter/: Cargo.toml
test_wasm_counter/smart_contract_code/: Cargo.toml
test_wasm_counter/src/: main.rs
testnet_conway_investigate_chain_id/: Cargo.toml  README.md  chain_id_9_markets
testnet_conway_investigate_chain_id/src/: lib.rs  main.rs
testnet_conway_validator_investigation/: Cargo.toml
testnet_conway_validator_investigation/src/: main.rs
