[package]
name = "benchmark_multi_read"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
futures = "0.3.30"
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

# Linera dependencies from GitHub
linera-base = { git = "https://github.com/linera-io/linera-protocol", features = ["test"] }
linera-views = { git = "https://github.com/linera-io/linera-protocol", features = ["test", "scylladb", "rocksdb", "dynamodb"] }
