[package]
name = "benchmark_repeated_fungibles"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

# Linera dependencies from GitHub
linera-base = { path = "/Users/mathieudutoursikiric/GITlineraOpen/GITnull_graph_ql/linera-protocol_second/linera-base", features = ["test"] }
linera-service = { path = "/Users/mathieudutoursikiric/GITlineraOpen/GITnull_graph_ql/linera-protocol_second/linera-service", features = ["test", "storage-service", "wasmer"] }
linera-sdk = { path = "/Users/mathieudutoursikiric/GITlineraOpen/GITnull_graph_ql/linera-protocol_second/linera-sdk" }

# Example applications
complex-data-contract = { path = "./smart_contract_code/complex-data-contract" }
