[package]
name = "test_wasm_smart_contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
sysinfo = "0.30"


# Linera dependencies from GitHub
linera-base = { git = "https://github.com/MathieuDutSik/linera-protocol_second", features = ["test"] }
linera-service = { git = "https://github.com/MathieuDutSik/linera-protocol_second", features = ["test", "storage-service", "wasmer"] }
linera-sdk = { git = "https://github.com/MathieuDutSik/linera-protocol_second" }

# Example applications
counter-no-state = { path = "./smart_contract_code/counter-no-state" }
