[package]
name = "test_migration_zero_to_one"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.77"
fs-err = "2.11.0"
futures = "0.3.30"
serde_json = "1.0.114"
tempfile = "3.20.0"
tonic = { version = "0.12.3", default-features = false }
tonic-health = "0.12"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

# Linera dependencies from GitHub
linera-base = { git = "https://github.com/linera-io/linera-protocol", branch = "testnet_conway", features = ["test"] }
linera-service = { git = "https://github.com/linera-io/linera-protocol", branch = "testnet_conway", features = ["test", "scylladb", "wasmer"] }
linera-client = { git = "https://github.com/linera-io/linera-protocol", branch = "testnet_conway" }
linera-core = { git = "https://github.com/linera-io/linera-protocol", branch = "testnet_conway" }
linera-sdk = { git = "https://github.com/linera-io/linera-protocol", branch = "testnet_conway" }
linera-rpc = { git = "https://github.com/linera-io/linera-protocol", branch = "testnet_conway" }
linera-views = { git = "https://github.com/linera-io/linera-protocol", branch = "testnet_conway" }
linera-storage-service = { git = "https://github.com/linera-io/linera-protocol", branch = "testnet_conway" }

# Example applications
social = { path = "./smart_contract_code/social" }
