[package]
name = "test_wasm_smart_contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
time = "=0.3.44"

# Linera dependencies from GitHub
linera-base = { git = "https://github.com/MathieuDutSik/linera-protocol_second", rev = "6dcc32305cff6d2853d14cab519efe9dfe316a58", features = ["test"] }
linera-service = { git = "https://github.com/MathieuDutSik/linera-protocol_second", rev = "6dcc32305cff6d2853d14cab519efe9dfe316a58", features = ["test", "storage-service", "wasmer"] }
linera-sdk = { git = "https://github.com/MathieuDutSik/linera-protocol_second", rev = "6dcc32305cff6d2853d14cab519efe9dfe316a58" }

# Example applications
counter = { path = "./smart_contract_code/counter" }

[patch.crates-io]
async-graphql-value = { path = "smart_contract_code/vendor/async-graphql-value" }
