[workspace]
resolver = "2"
members = [
    "counter",
]

[workspace.dependencies]
alloy-primitives = { version = "1.3.0", default-features = false }
alloy-sol-types = { version = "1.0.0", default-features = false }
anyhow = "1.0.80"
assert_matches = "1.5.0"
async-graphql = { version = "=7.0.17", default-features = false }
axum = "0.8.1"
base64 = "0.22.0"
bcs = "0.1.3"
candle-core = "0.4.1"
candle-transformers = "0.4.1"
futures = "0.3.24"
futures-util = "0.3.26"
getrandom = { version = "0.2.12", default-features = false, features = [
    "custom",
] }
hex = "0.4.3"
linera-sdk = { git = "https://github.com/MathieuDutSik/linera-protocol_second", rev = "6dcc32305cff6d2853d14cab519efe9dfe316a58" }
log = "0.4.20"
num-bigint = "0.4.3"
num-traits = "0.2.16"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sha3 = "0.10.8"
test-log = { version = "0.2.15", default-features = false, features = [
    "trace",
] }
tokenizers = { git = "https://github.com/christos-h/tokenizers", default-features = false, features = [
    "unstable_wasm",
] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }

counter = { path = "./counter" }

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'

[profile.bench]
debug = true

[patch.crates-io]
async-graphql-value = { path = "vendor/async-graphql-value" }
