[package]
name = "fungible-no-graphql"
version = "0.1.0"
authors = ["Linera <contact@linera.io>"]
edition = "2021"

[features]
test = []

[dependencies]
fungible = { path = "../fungible" }
futures.workspace = true
linera-sdk.workspace = true
serde.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
fungible = { workspace = true, features = ["test"] }
linera-sdk = { workspace = true, features = ["test", "wasmer"] }
tokio.workspace = true

[[bin]]
name = "fungible_no_graphql_contract"
path = "src/contract.rs"

[[bin]]
name = "fungible_no_graphql_service"
path = "src/service.rs"
